--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3>yah mama!!!!</h3>
     <p>Hi.My name is shakib.I'm 23 years old.I'm good for nothing</p>
     <button>kamrul hassan shakib</button>
+    <input type="number">
 </body>
 </html>
